# prometheus-http-query

./: CHANGELOG.md  Cargo.toml  Cargo.toml~  LICENSE  README.md
src/: aggregations.rs  builder.rs  client.rs  direct.rs  error.rs  functions.rs  lib.rs  lib.rs~  operators.rs  query.rs  response.rs  result.rs  selector.rs  util.rs  vector.rs
src/response/: instant.rs  instant.rs~  mod.rs  mod.rs~  range.rs  range.rs~
tests/: query.rs  query.rs~
