[package]
name = "prometheus-http-query"
version = "0.6.4"
authors = ["Peter Sebastian Puetz <ppuetz@protonmail.com>"]
edition = "2021"
repository = "https://github.com/puetzp/prometheus-http-query"
documentation = "https://docs.rs/prometheus-http-query"
readme = "README.md"
license = "MIT"
description = "Prometheus HTTP API client"
keywords = [ "prometheus", "prometheus-http-api", "promql", "api", "reqwest" ]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2.3", features = ["serde"] }
time = { version = "0.3.9", features = ["parsing", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = ["reqwest/default"]
default-ts = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
